--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.AndroidTestProject"
         tools:targetApi="31">
         <activity
+            android:name=".ComeBackActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ToInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".Calculator"
             android:exported="true">
             <intent-filter>
